style: Button and Input components

--- a/src/sass/base/_settings.scss
+++ b/src/sass/base/_settings.scss
@@ -11,3 +11,8 @@ code {
 font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+$background-color: #ffffff;
+$button-color: #FF1c44;
+$input-placeholder-color: #A9AFD9;
+$input-border-color: #D7DBF5;
