--- a/src/sass/base/_settings.scss
+++ b/src/sass/base/_settings.scss
@@ -12,7 +12,13 @@ font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
-$background-color: #ffffff;
-$button-color: #FF1c44;
+$small-screen-width: 768px;
+
+$main-background-color: #FAFBFF;
+$card-background-color: #FFFFFF;
+$button-color: #FF1C44;
 $input-placeholder-color: #A9AFD9;
 $input-border-color: #D7DBF5;
+
+$text-default-color: #676F8F;
+$phone-color: #6F7DFF;
