--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -1,5 +1,57 @@
 .navbar {
     display: flex;
-    height: 64px;
-    background-color: $background-color;
+    align-items: center;
+    justify-content: space-between;
+    height: 56px;
+    padding: 0 32px;
+    background-color: $card-background-color;
+    border-bottom: 1px solid $input-border-color;
+
+    @media screen and (min-width: $small-screen-width) {
+        height: 64px;
+        padding: 0 120px;
+    }
+}
+
+.navbar__telephone {
+    display: flex;
+    align-items: center;
+}
+
+.navbar__subtitle {
+    color: $text-default-color;
+    font-size: 12px;
+    margin-right: 20px;
+
+    @media screen and (max-width: $small-screen-width) {
+        display: none;
+    }
+}
+
+.navbar__telephone-icon {
+    width: 24px;
+    height: 24px;
+
+    @media screen and (max-width: $small-screen-width) {
+        width: 20px;
+        height: 20px;
+    }
+}
+
+.navbar__telephone-number {
+    color: $phone-color;
+    font-size: 14px;
+
+    @media screen and (max-width: $small-screen-width) {
+        display: none;
+    }
+}
+
+.navbar__telephone-quote {
+    color: $phone-color;
+    font-size: 14px;
+
+    @media screen and (min-width: $small-screen-width) {
+        display: none;
+    }
 }
