feat: Final page small design

--- a/src/sass/base/_settings.scss
+++ b/src/sass/base/_settings.scss
@@ -20,5 +20,7 @@ $button-color: #FF1C44;
 $input-placeholder-color: #A9AFD9;
 $input-border-color: #D7DBF5;
 
+$text-primary-color: #FF1C44;
 $text-default-color: #676F8F;
+$text-subtitle-color: #494F66;
 $phone-color: #6F7DFF;
