--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -13,6 +13,13 @@
     }
 }
 
+.navbar--transparent {
+    @extend .navbar;
+
+    border: none;
+    background-color: rgba($color: #FFFFFF, $alpha: 0.0);
+}
+
 .navbar__telephone {
     display: flex;
     align-items: center;
