feat: Home page mobile

--- a/src/sass/base/_settings.scss
+++ b/src/sass/base/_settings.scss
@@ -24,3 +24,4 @@ $text-primary-color: #FF1C44;
 $text-default-color: #676F8F;
 $text-subtitle-color: #494F66;
 $phone-color: #6F7DFF;
+$success-color: #389E0D;
