--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -1,5 +1,83 @@
+.home__header_container {
+  background-color: $main-background-color;
+}
+
+.home__description_container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  margin-bottom: 40px;
+}
+
 .home__form {
-    display: flex;
-    flex-direction: column;
-    padding: 0 32px;
+  display: flex;
+  flex-direction: column;
+  padding: 0 32px;
+
+  > * {
+    margin-bottom: 16px;
+  }
+}
+
+.home__form-title {
+  padding: 0 32px;
+  font-size: 24px;
+  margin-bottom: 24px;
+}
+
+.home__illustration {
+  position: relative;
+  top: 32px;
+}
+
+.home__description {
+  display: flex;
+  flex-direction: column;
+  padding-left: 32px;
+}
+
+.home__tag {
+  font-size: 10px;
+  margin-top: 40px;
+  margin-bottom: 0;
+  color: $text-subtitle-color;
+}
+
+.home__title {
+  font-size: 28px;
+  margin-top: 8px;
+  margin-bottom: 0;
+
+  color: $text-subtitle-color;
+}
+
+.home__title--secondary {
+  @extend .home__title;
+
+  color: $text-primary-color;
+}
+
+.home__subtitle {
+  font-size: 14px;
+  margin-top: 12px;
+  margin-bottom: 0;
+  color: $text-default-color;
+}
+
+.home__checkbox-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.home__checbox-text {
+  margin: 0;
+  padding-left: 32px;
+  font-size: 12px;
+  color: $text-default-color;
+
+  b {
+    font-weight: 500;
+  }
 }
