--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -5,6 +5,8 @@
 @import './components/navbar';
 @import './components/button';
 @import './components/input';
+@import './components/dropdown';
+@import './components/checkbox';
 
 // Pages
 @import './pages/home';
