--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -1,5 +1,17 @@
-.home__header_container {
+.home__header_background {
   background-color: $main-background-color;
+  width: 100%;
+  height: 336px;
+  position: absolute;
+  z-index: -1;
+
+  @media screen and (min-width: $small-screen-width) {
+    height: 100%;
+    width: 536px;
+    background-color: $home-background-color;
+    background-image: url("../../shared/assets/home-background.png");
+    background-repeat: no-repeat;
+  }
 }
 
 .home__description_container {
@@ -8,6 +20,12 @@
   justify-content: space-between;
 
   margin-bottom: 40px;
+
+  @media screen and (min-width: $small-screen-width) {
+    flex-direction: column-reverse;
+    justify-content: center;
+    width: 320px;
+  }
 }
 
 .home__form {
@@ -17,6 +35,10 @@
 
   > * {
     margin-bottom: 16px;
+  }
+
+  @media screen and (min-width: $small-screen-width) {
+    padding: 0;
   }
 }
 
@@ -35,6 +57,10 @@
   display: flex;
   flex-direction: column;
   padding-left: 32px;
+
+  @media screen and (min-width: $small-screen-width) {
+    padding: 0;
+  }
 }
 
 .home__tag {
@@ -79,5 +105,47 @@
 
   b {
     font-weight: 500;
+  }
+}
+
+.home__container {
+  display: flex;
+  flex-direction: column;
+
+  @media screen and (min-width: $small-screen-width) {
+    flex-direction: row;
+    // justify-content: space-evenly;
+    height: 100%;
+  }
+}
+
+.home__form-container {
+  @media screen and (min-width: $small-screen-width) {
+    width: 288px;
+  }
+}
+
+.home__button {
+  width: 100%;
+
+  @media screen and (min-width: $small-screen-width) {
+    width: 192px;
+  }
+}
+
+.home__description_bucket {
+  @media screen and (min-width: $small-screen-width) {
+    width: 536px;
+    display: flex;
+    justify-content: center;
+  }
+}
+
+.home__form_bucket {
+  @media screen and (min-width: $small-screen-width) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: calc(100vw - 536px);
   }
 }
