feat: Plan page desktop

--- a/src/sass/base/_settings.scss
+++ b/src/sass/base/_settings.scss
@@ -21,11 +21,13 @@ $button-color: #ff1c44;
 $input-placeholder-color: #a9afd9;
 $input-border-color: #d7dbf5;
 $price-border-color: #c5cbe0;
+$car-border-color: #f0f2fa;
 $bar-border-color: #edeffc;
 
 $text-primary-color: #ff1c44;
 $text-default-color: #676f8f;
 $text-subtitle-color: #494f66;
+$text-stepper-color: #ffffff;
 $phone-color: #6f7dff;
 $success-color: #389e0d;
 $progress-color: #6464fa;
