--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -12,4 +12,7 @@
 // Pages
 @import "./pages/home";
 @import "./pages/final";
-@import "./pages/plan";
+@import "./pages/plan/amount";
+@import "./pages/plan/configuration";
+@import "./pages/plan/stepper";
+@import "./pages/plan/plan";
