--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -9,6 +9,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
+  a {
+    text-decoration: none;
+    color: #ffffff;
+  }
 }
 
 .button--wide {
