feat: Query random user from endpoint

--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -127,9 +127,11 @@
 
 .home__button {
   width: 100%;
+  margin-top: 16px;
 
   @media screen and (min-width: $small-screen-width) {
     width: 192px;
+    margin-top: 24px;
   }
 }
 
