feat: Custom field validation

--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -151,3 +151,10 @@
     width: calc(100vw - 536px);
   }
 }
+
+.home__validation-text {
+  color: $text-primary-color;
+  font-size: 12px;
+
+  margin: 0;
+}
