feat: Footer design

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -3,6 +3,7 @@
 
 // Components
 @import "./components/navbar";
+@import "./components/footer";
 @import "./components/button";
 @import "./components/input";
 @import "./components/dropdown";
